feat: implement centralized exception handling with custom exceptions
- Add GlobalExceptionHandler for consistent error responses
- Create custom exception classes
- Replace all generic exceptions throughout services
- Return proper HTTP status codes based on error type